--- a/testing_kitti_tf_data.ipynb
+++ b/testing_kitti_tf_data.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "machine_shape": "hm",
       "gpuType": "V28",
-      "authorship_tag": "ABX9TyOlm9XxBcAcGBsx2QRNZMyg",
+      "authorship_tag": "ABX9TyNki8N5ppyPr/iVqpIIPMhL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -73,7 +73,7 @@
         "\n",
         "import tensorflow as tf\n",
         "\n",
-        "\n",
+        "# can be found at https://drive.google.com/drive/folders/1pOXAI_pF5ikYHbvLIfULs2X6YXnGJh6J?usp=sharing\n",
         "DATA_DIR = '/content/drive/MyDrive/Colab Notebooks/PredNet/raw_data/'\n",
         "\n",
         "# Configuration\n",
@@ -95,7 +95,7 @@
       "metadata": {
         "id": "DWX9N5EOve64"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -115,7 +115,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -140,7 +140,7 @@
           "height": 737
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
